--- a/wiki/aeon.wikitext
+++ b/wiki/aeon.wikitext
@@ -1,4 +1,10 @@
-A very long period of time. [See eon]
+==English==
+
+===Noun===
+
+'''Aeon'''
+
+# A very long period of time. See [[eon]].
 
 "When Earth's last picture is painted, and the tubes are twisted and dried,/ When the oldest colors have faded, 
 and the youngest critic has died,/ We shall rest, and, faith, we shall need it -- lie down for an aeon or two,/
