cleaned up: English, not Latin; deleted "related terms" - not appropriate; what is the def, if any? <procrastinative#64132>

--- a/wiki/procrastinative.wikitext
+++ b/wiki/procrastinative.wikitext
@@ -1,14 +1,8 @@
-==Latin==
+==English==
 ===Etymology===
-Related to ''[[procrastination]]''
+<!--can we have a proper etym here: Related to ''[[procrastination]]''-->
 
 ===Adjective===
-'''procrastinative'''
+'''procrastinative''' (''no [[comparative]] or [[superlative]]'')
 
-# [[procrastinative]]
-#: "procrastinative case"
-
-===Related Terms===
-*[[pro]]
-*[[crasti]]
-*[[nation]]
+<!--what does this mean, if anything?-->
