--- a/wiki/Quarzstaublungenerkrankung.wikitext
+++ b/wiki/Quarzstaublungenerkrankung.wikitext
@@ -1,1 +1,7 @@
-Cancer of the lungs by the effect of crystalline silicon dioxide (SiO 2 ) during proven quartz dust lung illness (silicosis or Siliko Tuberkulose).
+==German==
+
+===Noun===
+
+'''Quarzstaublungenerkrankung'''
+
+# literaly, "Quartz dust lung illness" - Cancer of the lungs by the effect of crystalline silicon dioxide (SiO 2 ) during proven quartz dust lung illness (silicosis or Siliko Tuberkulose).
