removed initial capitals - not necessary; Hungarian translation needs attention <once upon a time#38009>

--- a/wiki/once_upon_a_time.wikitext
+++ b/wiki/once_upon_a_time.wikitext
@@ -1,30 +1,30 @@
 ==English==
 ===Phrase===
-'''Once upon a time'''
+'''once upon a time'''
 
 #The traditional beginning of children's stories.
 
 ====Translations====
 '''Note''': Many of the translations are literally "There once was".  The translation of "Once upon a time, there was a princess" into Italian, for example, would therefore be "C'era una volta una principessa" (literally, "There was once a princess") rather than the literal "C'era una volta c'era una principessa", which would mean "There was once there was a princess" [''sic''].
 
-*[[Albanian]]: [[Na ishte njëherë]]
-*[[Catalan]]: [[Hi havia una vegada]], [[Això era una vegada]]
+*Albanian: [[na ishte njëherë]]
+*[[Catalan]]: [[hi havia una vegada]], [[això era una vegada]]
 *Chinese: [[往事]] (wǎng shì)
-*Dutch: [[Er was eens]]
-*[[Esperanto]]: [[Iam estis]]
-*Finnish: [[Olipa kerran]], [[Olipa kerran kauan sitten]]
-*French: [[Il était une fois]], [[Il y avait une fois]]
-*German: [[Es war einmal]]
-*Hebrew: [[לפני שנים רבות]] (Lifnei shanim rabot)
-*Hungarian: [[Hol volt, hol nem volt]]
-*Italian: [[C'era una volta]]
-*Japanese: [[昔々]], [[昔昔]] ([[むかしむかし]], Mukashi-mukashi), [[今は昔]] (imawa mukashi)
-*Latin: [[Olim]]
-*Latvian: [[Reiz sensenos laikos]]
-*Polish: [[Był raz]]
-*Portuguese: [[Era uma vez]]
-*Romanian: [[A fost odată]]
-*Slovak: [[Kde bolo, tam bolo]] ''(lit: Where was, there was)'', [[Za siedmimi horami, za siedmimi dolami]] ''(lit: Behind seven mountains, behind seven valeys)''
-*Spanish: [[Érase una vez]], [[Había una vez]], [[Era una vez]]
-*Swedish: (Det var) [[en gång för länge sedan]] <!-- ''lit. (There was) one time for long ago...''-->
+*Dutch: [[er was eens]]
+*[[Esperanto]]: [[iam estis]]
+*Finnish: [[olipa kerran]], [[olipa kerran kauan sitten]]
+*French: [[il était une fois]], [[il y avait une fois]]
+*German: [[es war einmal]]
+*Hebrew: [[לפני שנים רבות]] (lifnei shanim rabot)
+*Hungarian: [[hol volt, hol nem volt]]<!--are these two separate translations?  If so, wikify separately
+*Italian: [[c'era una volta]]
+*Japanese: [[昔々]], [[昔昔]] ([[むかしむかし]], mukashi-mukashi), [[今は昔]] (imawa mukashi)
+*Latin: [[olim]]
+*Latvian: [[reiz sensenos laikos]]
+*Polish: [[był raz]]
+*Portuguese: [[era uma vez]]
+*Romanian: [[a fost odată]]
+*Slovak: [[kde bolo, tam bolo]]<!--this belongs on the Slovak page: (''literally, "where was, there was"'')-->, [[za siedmimi horami, za siedmimi dolami]] <!--this belongs on the Slovak page: (''literally "behind seven mountains, behind seven valleys"'')-->
+*Spanish: [[érase una vez]], [[había una vez]], [[era una vez]]
+*Swedish: (Det var) [[en gång för länge sedan]] <!--This belongs on the Swedish page ''literally "(there was) one time for long ago..."''-->
 *[[Tamil]]: [[முன்பு ஒது தாள்]] (munbu odu tāl), [[முன்பு ஒது காலம்]] (munbu odu kālam)
