fmt; +usage note; dated quot <aeon#64113>

--- a/wiki/aeon.wikitext
+++ b/wiki/aeon.wikitext
@@ -1,13 +1,14 @@
 ==English==
-
 ===Noun===
+'''aeon''' (''plural'' '''aeons''')
 
-'''Aeon'''
+====Variant spellings====
+*[[eon]]
 
-# A very long period of time. See [[eon]].
+#A very long period of time.
 
-"When Earth's last picture is painted, and the tubes are twisted and dried,/ When the oldest colors have faded, 
-and the youngest critic has died,/ We shall rest, and, faith, we shall need it -- lie down for an aeon or two,/
-Till the Master of All Good Workmen shall put us to work anew."
+====Usage note====
+'''Aeon''' is an older spelling.  '''Eon''' is now the more common spelling.
 
-Kipling, "When Earth's Last Picture is Painted"
+====Quotations====
+*'''1892''': When Earth's last picture is painted, and the tubes are twisted and dried,/ When the oldest colors have faded, and the youngest critic has died,/ We shall rest, and, faith, we shall need it -- lie down for an aeon or two,/Till the Master of All Good Workmen shall put us to work anew. &mdash; ''When Earth's Last Picture is Painted, l’Envoi to'' The Seven Seas, [[w:Rudyard Kipling|Rudyard Kipling]]
