usage note -> def <aeon#64113>

--- a/wiki/aeon.wikitext
+++ b/wiki/aeon.wikitext
@@ -5,10 +5,7 @@
 ====Variant spellings====
 *[[eon]]
 
-#A very long period of time.
-
-====Usage note====
-'''Aeon''' is an older spelling.  '''Eon''' is now the more common spelling.
+#An older spelling of '''[[eon]]]'''.
 
 ====Quotations====
 *'''1892''': When Earth's last picture is painted, and the tubes are twisted and dried,/ When the oldest colors have faded, and the youngest critic has died,/ We shall rest, and, faith, we shall need it -- lie down for an aeon or two,/Till the Master of All Good Workmen shall put us to work anew. &mdash; ''When Earth's Last Picture is Painted, l’Envoi to'' The Seven Seas, [[w:Rudyard Kipling|Rudyard Kipling]]
