--- a/wiki/aeon.wikitext
+++ b/wiki/aeon.wikitext
@@ -2,10 +2,7 @@
 ===Noun===
 '''aeon''' (''plural'' '''aeons''')
 
-====Variant spellings====
-*[[eon]]
-
-#An older spelling of '''[[eon]]]'''.
+#An older spelling of '''[[eon]]'''.
 
 ====Quotations====
 *'''1892''': When Earth's last picture is painted, and the tubes are twisted and dried,/ When the oldest colors have faded, and the youngest critic has died,/ We shall rest, and, faith, we shall need it -- lie down for an aeon or two,/Till the Master of All Good Workmen shall put us to work anew. &mdash; ''When Earth's Last Picture is Painted, l’Envoi to'' The Seven Seas, [[w:Rudyard Kipling|Rudyard Kipling]]
