fmt, var, syns, ants <meatspace#64087>

--- a/wiki/meatspace.wikitext
+++ b/wiki/meatspace.wikitext
@@ -1,1 +1,14 @@
-Meat space refers to the real, physical world, as opposed to the Internet, or virtual world.
+==English==
+===Noun===
+'''meatspace''' (''[[uncountable]]'')
+
+====Variant forms====
+*'''meat-space''', '''meat space'''
+
+#(''Internet'') The real, physical world, as opposed to the [[virtual]] world of the [[Internet]].
+
+====Synonyms====
+*[[real life]]
+
+====Antonyms====
+*[[cyberspace]]
