fmt; extra def <w/e#64071>

--- a/wiki/w%2Fe.wikitext
+++ b/wiki/w%2Fe.wikitext
@@ -1,5 +1,6 @@
+==English==
+===Abbreviation===
 '''w/e'''
 
-''Informal abbreviation''
-
-# [[whatever]]
+#[[Week]] [[ending]].
+#(''slang'') [[Whatever]].
