--- a/wiki/bingo.wikitext
+++ b/wiki/bingo.wikitext
@@ -1,1 +1,116 @@
-Bingo is a game of chance involving [[gambling]]. Numbers are called out randomly and contestants cross them off score cards as they go. The first person to get all the numbers wins (to a shout of 'Bingo" or 'House"). Often seen today as a more innocent, mild form of gambling unlike casino games.
+==English==
+===Noun===
+'''bingo'''
+
+#A [[game of chance]] for two or more playes, who mark off numbers on a grid as they are called out by another person (the ''[[caller]]''); the game is won by the first person to call out "bingo!" or "house!" on crossing off all numbers on the grid or in one line of the grid.
+
+====Synonyms====
+*[[housey-housey]], [[lotto]]
+
+====Translations====
+
+'''game'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Interjection===
+'''bingo!'''
+
+#Used by players of bingo to claim a win.
+#(''colloquial'') Used when finding what one has been looking for.
+
+====Synonyms====
+*(''when finding something'') [[aha]], [[eureka]], [[got it]], [[that's it]], [[yes]]
+
+====Translations====
+
+'''to claim a win in bingo'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*German: Bingo ''n''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Spanish: bingo ''m''
+|}
+|}
+
+'''when finding something'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[ça y est]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Derived terms===
+*[[bingo caller]]
+*[[bingo hall]]
+*[[bingo wings]]
+*[[bullshit bingo]]
+
+===See also===
+*[[Kelly's eye]]<!--1-->
+*[[man alive]]<!--5-->
+*[[lucky for some]]<!--7-->
+*[[Maggie's den]], [[Major's den]], [[Tony's den]]<!--10, in the UK, referring to the Number 10, Downing Street, the prime minister's residence-->
+*[[one fat lady]]<!--8-->
+*[[doctor's orders]]<!--9-->
+*[[legs eleven]]<!--11-->
+*[[unlucky for some]]
+*[[on its own]]<!--followed by the number: any single-digit number-->
+*[[sweet sixteen]]<!--16-->
+*[[key of the door]], [[key to the door]]<!--21; both forms seem to exist-->
+*[[two little ducks]]<!--22-->
+*[[thee and me]]<!--23-->
+*[[dirty Gertie]]<!--30-->
+*[[more than eleven]]<!--37-->
+*[[halfway there]]<!--45-->
+*[[tweak of the thumb]]<!--51-->
+*[[Brighton line]]<!--59-->
+*[[red raw]]<!--64-->
+*[[clickety-click]]<!--66-->
+*[[bang on the drum]]<!--71-->
+*[[trombones]]<!--76-->
+*[[one more time]]<!--79-->
+*[[stop and run]]<!--81-->
+*[[between the sticks]]<!--86-->
+*[[two fat ladies]]<!--88-->
+*[[top of the shop]]<!--90-->
+*[[w:bingo|Wikipedia article on bingo]]
+
+----
+==German==
+===Noun===
+'''Bingo''' ''n''
+
+#bingo (''game'')
+
+----
+==Spanish==
+===Noun===
+'''bingo''' ''m''
+
+#bingo (''game'')
