more syns <bingo#64066>

--- a/wiki/bingo.wikitext
+++ b/wiki/bingo.wikitext
@@ -29,10 +29,11 @@
 '''bingo!'''
 
 #Used by players of bingo to claim a win.
-#(''colloquial'') Used when finding what one has been looking for.
+#(''colloquial'') Used when finding what one has been looking for or trying to recall.
 
 ====Synonyms====
-*(''when finding something'') [[aha]], [[eureka]], [[got it]], [[that's it]], [[yes]]
+*(''used by players of bingo to claim a win''): [[house]]!
+*(''when finding something'') [[aha]]!, [[eureka]]!, [[got it]]!, [[that's it]]!, [[yes]]!
 
 ====Translations====
 
