--- a/wiki/U-boat.wikitext
+++ b/wiki/U-boat.wikitext
@@ -1,1 +1,9 @@
-A [[submarine]]. The German compound word for a sub is unterzeeboot(?), hence U-boot/U-boat. During the 1st and 2nd [[World War]] Allied shipping was sunk by German U-boats.
+==English==
+===Etymology===
+[[Calque]] of German ''[[U-boot]]''.
+
+===Noun===
+#Any German [[submarine]] of the [[First World War|First]] or [[Second World War]], or any [[Austro-Hungarian]] submarine of the First World War.
+
+===See also===
+*[[w:U-boat|Wikipedia article on U-boats]]
