fmt; separated "types of boat" from "derived terms"; copied many types of boat from Wikipedia; deleted incorrect fr: (with a circumflex); more "see also" <boat#7377>

--- a/wiki/boat.wikitext
+++ b/wiki/boat.wikitext
@@ -7,31 +7,18 @@
 === Noun ===
 '''boat''' ([[boats]])
 
-#Small floating construction to [[transport]] [[passengers]] and [[goods]]. Large boats are termed [[ship]]s.
-#Submarines are refered to as 'boats'.
-
-====Related terms====
-*[[boatman]]
-*[[lifeboat]]
-*[[tugboat]]
-*[[u-boat]]/[[submarine]]
-*[[dragon boat]]
-*[[fishing boat]]
-*[[ship]]
-*[[raft]]
-*[[barge]]
-*[[yacht]]
+#Any small, floating [[construction]] used to [[transport]] [[people]] and [[goods]] on or (in the case of a submarine) under water.
 
 ==== Translations ====
-*[[Breton]]: [[bag]] ''f'', bigi / bagoù ''pl''
+*[[Breton]]: [[bag#Breton|bag]] ''f'', bigi / bagoù ''pl''
 *Bulgarian: [[лодка]] ''f''
 *[[Catalan]]: [[vaixell]] ''m''
 *Chinese Characters: [[舟]] (zhōu)
 *Chinese: [[小船]]
-*Dutch: [[boot]] ''m'', [[schip]] ''n''
+*Dutch: [[boot#Dutch|boot]] ''m'', [[schip]] ''n''
 *Finnish: [[vene]]
-*French: [[bâteau]] ''m'', [[bateau]] ''m''
-*German: [[Boot]] ''n'', [[Schiff]] ''n''
+*French: [[bateau]] ''m''<!--this does not take a circumflex-->
+*German: [[Boot#German|]] ''n'', [[Schiff]] ''n''
 *Greek: [[βάρκα]] ''f'' (v&aacute;rka)
 *Hebrew: [[עוניה]] ''f''
 *[[Indonesian]]: [[perahu]]
@@ -40,9 +27,67 @@
 *Korean: [[배]]
 *Persian: [[قایق]] (qayeq)
 *Polish: [[łódź]], [[łódka]] ''m''
-*Portuguese: [[barco]] ''m''
+*Portuguese: [[barco#Portuguese|barco]] ''m''
 *Russian: [[лодка]] ''f'' (lo'dka)
-*Spanish: [[barco]] ''m'', [[bote]] ''m''
+*Spanish: [[barco#Spanish|barco]] ''m'', [[bote]] ''m''
+
+====Derived terms====
+*[[boater]]
+*[[boating]]<!--noun and adjective-->
+*[[boatman]]
+
+===Some types of boat===
+*[[bangca]]
+*[[barge]]
+*[[canoe]]
+*[[catamaran]]
+*[[coracle]]
+*[[cruiser]]
+*[[cutter]]
+*[[dhow]]
+*[[dinghy]]
+*[[dory]]
+*[[dragon boat]]
+*[[Dutch barge]]
+*[[felucca]]
+*[[ferry]], [[ferryboat]]
+*[[fishing boat]]
+*[[folding boat]]
+*[[go-fast boat]]
+*[[houseboat]]
+*[[hovercraft]]
+*[[inflatable boat]], [[inflatable raft]]
+*[[jetboat]], [[jetski]]
+*[[junk]]
+*[[kayak]]
+*[[ketch]]
+*[[lifeboat]]
+*[[log boat]]
+*[[luxemotor]]
+*[[motorboat]]
+*[[narrowboat]]
+*[[Norfolk wherry]]
+*[[outrigger canoe]]
+*[[peniche]]
+*[[pinnace]]
+*[[powerboat]]
+*[[raft]]
+*[[rigid-hulled inflatable boat (RIB)]]
+*[[rowboat]], [[rowing boat]]
+*[[sailboat]], [[sailing boat]]
+*[[schooner]]
+*[[sloop]]
+*[[submarine]]
+*[[tjalk]]
+*[[trimaran]]
+*[[tug]], [[tugboat]]
+*[[U-boat]]
+*[[water taxi]]
+*[[whaleboat]]
+*[[yacht]]
+*[[yawl]]
 
 ===See also===
+*[[craft]]
 *[[ship]]<!-- is this ever a synonym? -->
+*[[vessel]]
