+fr: entry; en: entry needs formatting <jalousie#64062>

--- a/wiki/jalousie.wikitext
+++ b/wiki/jalousie.wikitext
@@ -1,1 +1,8 @@
 In [[Naval Architecture]] a Jalousie is a component in a [[ventilation]] system. It is pronounced Ja- Lucy.
+
+----
+==French==
+===Noun===
+'''jalousie''' ''f''
+
+#[[jealousy]]
