--- a/wiki/dockyard.wikitext
+++ b/wiki/dockyard.wikitext
@@ -1,3 +1,12 @@
-A [[yard]] of [[dock]]s is the same as a [[wharf]]. Often used to describe a place where [[Ship]]s are repaired or loaded.
+==English==
+===Noun===
+'''dockyard''' (''plural'' '''dockyards''')
 
-Related terms: [[harbor]]/[[harbour]], [[marina]], [[seaport]], [[ship]],[[dockside]].
+#A place where [[ship]]s are [[repair]]ed or [[load]]ed.
+
+===See also===
+*[[dock]]
+*[[harbor]]/[[harbour]]
+*[[marina]]
+*[[port]]
+*[[seaport]]
