+fr: entry; en: entry needs formatting; fr: needs translation <caisson#64064>

--- a/wiki/caisson.wikitext
+++ b/wiki/caisson.wikitext
@@ -4,3 +4,10 @@ A Caisson is used in [[Civil Engineering]] to hold back water during [[construct
 In [[Dockyard]]s, Caissons are used as floating gates to hold back the water in [[Drydock]]. 
 
 Pronounced Case-on, although it is often mis-pronounced as Ka - soon.
+
+----
+==French==
+===Noun===
+'''caisson''' ''m''
+
+#<!--translation required-->
