--- a/wiki/grappa.wikitext
+++ b/wiki/grappa.wikitext
@@ -1,3 +1,15 @@
-=={{En}}==
+==English==
 ===Noun===
-An [[Italian]] [[grape]]-based [[spirit]] of between 80 and 100 proof, made from the [[distillation]] of [[pomace]].
+'''grappa''' (''[[uncountable]] and [[countable]]'')
+
+#(''uncountable'') An [[Italian]] [[grape]]-based [[spirit]] of between 80 and 100 proof, made from the [[distillation]] of [[pomace]]; (''countable'') a variety of grappa.
+
+====Translations====
+*Italian: grappa ''f''
+
+----
+==Italian==
+===Noun===
+'''grappa''' ''f''
+
+#grappa
