--- a/wiki/%E9%B0%B9.wikitext
+++ b/wiki/%E9%B0%B9.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate form''': [[鲣]]
+* '''Alternate forms''': [[鲣]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 195''': [[Wiktionary:Chinese radical index 魚|魚]]+11 strokes
 
@@ -14,13 +14,13 @@
 The use of this character to transcribe the Japanese word /katuwo/ > /katuo/ (katsuo, i.e. Katsuwonus pelamis) derives from the ancient Japanese orthographic practice of writing the name of this fish with the Chinese characters 堅魚 (literally, "hard fish"). The first character, [[堅]], represents the Japanese morpheme /kata/ ([[かたい]], hard). The second character, 魚, represents the Japanese morpheme /uwo/ ~ /iwo/ > /uo/ ([[うお]], fish). It is obvious from this method of transcription that the ancient Japanese believed that the name of this fish, /katuwo/, derived from a compound of the morphemes /kata/ + /uwo/. This may have been a mere folk etymology, but many modern etymologists still believe that the Japanese name for this fish probably derives from */kata-uwo/.
 
 * '''Common Meaning''': 
-*# a skipjack tuna, a bonito, Katsuwonus pelamis (Japanese)
-*# a great eel (Classical Chinese)
-*# a kind of shark
+*# a [[skipjack]] tuna, a [[bonito]], [[Katsuwonus pelamis]] (Japanese)
+*# a great [[eel]] (Classical Chinese)
+*# a kind of [[shark]]
  
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -39,7 +39,7 @@ The use of this character to transcribe the Japanese word /katuwo/ > /katuo/ (ka
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[けん]] (ken)
@@ -49,9 +49,9 @@ The use of this character to transcribe the Japanese word /katuwo/ > /katuo/ (ka
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 견
+* '''[[Hangeul]]''': [[견]]
 
 * '''[[Eumhun]] reading''': 
 
