--- a/wiki/delicious.wikitext
+++ b/wiki/delicious.wikitext
@@ -3,7 +3,7 @@
 
 ====Translations====
 *Chinese: [[可口]]
-*Dutch: [[heerlijk]]
+*Dutch: [[heerlijk]], [[lekker]], [[smakelijk]]
 *Finnish: [[herkullinen]]
 *French: [[délicieux]] ''m'', [[délicieuse]] ''f''
 *German: [[köstlich]], [[lecker]]
