a passing icthyologist can surely improve upon this (-: <bonito#60034>

--- a/wiki/bonito.wikitext
+++ b/wiki/bonito.wikitext
@@ -1,7 +1,17 @@
 ==English==
-
 ===Noun===
-
 '''bonito'''
 
-#A large tropical fish (Orcynus pelamys) allied to the tunny.
+#A large [[tropical fish]] allied to the [[tunny]].
+
+====Scientific names====
+*[[Katsuwonus pelamis]]
+*[[Orcynus pelamys]]
+
+====Translations====
+*CJK Characters: [[鰹]], [[鲣]]
+*Japanese: [[鰹]], [[カツオ]] (katsuo)
+
+===See also===
+*[[skipjack]]<!-- or should it be [[skipjack tuna]]? -->
+*[[tunny]]
