more defs (from Wikipedia); der & see also; syns; translation tables; some translations <bush#64129>

--- a/wiki/bush.wikitext
+++ b/wiki/bush.wikitext
@@ -1,12 +1,22 @@
 == English ==
-
 === Noun ===
+'''bush''' (''[[countable]] and [[uncountable]]'', ''plural'' '''bushes''')
 
-'''bush'''
+#(''countable'') A [[horticultural]] rather than strictly [[botanical]] category of [[woody plant]] that is distinguished from a tree by its multiple stems and lower height; usually less than 6m tall.
+#(''uncountable'') The [[countryside]] area of [[Australia]] that is neither [[arid]] nor [[remote]] enough to [[constitute]] the [[outback]], and that can include areas of natural flora even within conurbations; naturally forested areas in New Zealand.
+#(''countable, coarse slang'') The [[pubic hair]] of a woman.
+#(''countable, coarse slang'') By extension, the [[vulva]] of a woman.
+#(''uncountable, coarse slang'') By extension, [[sexual intercourse]] with a woman.
 
-# A [[horticultural]] rather than strictly [[botanical]] category of [[woody plant]] that is distinguished from a tree by its multiple stems and lower height; usually less than 6m tall.
+====Synonyms====
+*(''plant''): [[shrub]]
+*(''woman's pubic hair''): [[minge]]
+*(''vulva''): [[box]], [[gash]]
+*(''sexual intercourse with a woman''):
 
 ====Translations====
+
+'''woody plant'''
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -20,3 +30,72 @@
 <!--languages from J to Z go here-->
 |}
 |}
+
+'''countryside in Australia and New Zealand'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''slang: public hair of a woman'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''slang: vulva of a woman'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[chatte]] ''f''
+*Italian: [[figa]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''slang: sexual intercourse with a woman'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+===Derived terms===
+*[[bushbaby]]
+*[[bushman]]
+*[[bushmeat]]
+*[[bushwhacker]]
+*[[bushy]]
+*[[beat about the bush]], [[beat around the bush]]
+
+===See also===
+*[[Alaskan bush]]
