--- a/wiki/%E3%82%B7%E3%83%9E%E3%82%A2%E3%82%B8.wikitext
+++ b/wiki/%E3%82%B7%E3%83%9E%E3%82%A2%E3%82%B8.wikitext
@@ -1,7 +1,8 @@
 ==Japanese==
 ===Noun===
-'''シマアジ''' (shima-aji)<!-- could be [[シマ]][[アジ]] "island mackerel" -->
+'''[[シマ]][[アジ]]''' ([[縞鯵]], shima-aji)<!-- literally "striped mackerel"? -->
 
 # A kind of [[fish]] used in [[sushi]]
 
-*[[trevally]], [[striped jack]]<!-- are these the same? my local shushi shop called it trevally with the kana/romaji here. on the web i find striped jack, possibly different local names in different countries -->
+====Translations====
+*English: [[trevally]], [[striped jack]]<!-- are these the same? my local shushi shop called it trevally with the kana/romaji here. on the web i find striped jack, possibly different local names in different countries -->
