+translations for "woody plant" from Wikipedia; +it: <bush#64129>

--- a/wiki/bush.wikitext
+++ b/wiki/bush.wikitext
@@ -22,12 +22,18 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Danish: [[busk#Danish|busk]]
+*Dutch: [[struik]], [[heester]]
 *Finnish: [[pensas]], [[puska]]
+*French: [[arbrisseau]] ''m''
+*German: [[Strauch]] ''m''
+*Italian: [[arbusto#Italian|arbusto]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Spanish: [[arbusto#Spanish|arbusto]] ''m''
 |}
 |}
 
