fmt; extra (earlier) def; more syns (removed "grotesque" and "odd", which aren't); fr: & it: <fantastic#64053>

--- a/wiki/fantastic.wikitext
+++ b/wiki/fantastic.wikitext
@@ -1,17 +1,69 @@
 ==English==
 ===Adjective===
-'''fantastic'''
+'''fantastic''' (''[[comparative]]'' '''more fantastic''', ''[[superlative]]'' '''most fantastic''')
 
+#(''now usually'' '''fantastical''') Based in [[fantasy]] rather than reality.
+#:''fantastic stories of dragons and goblins''
 #Incredibly [[wonderful]], extraordinarily good; used especially as an intensifier.
-#: " fantastic trip to the Orient."
-#Extravagantly fanciful and unrealistic; foolish
-#: "a fantastic idea of his own importance."
+#:''a fantastic trip to the Orient''
+#Extravagantly fanciful and unrealistic; foolish.
+#:''a fantastic idea of his own importance''
 
-===Synonyms===
-*[[grotesque]]
-*[[odd]]
+====Synonyms====
+*(''based in fantasy rather than reality''): [[fabulous]], [[fantastical]]
+*(''incredibly wonderful''): [[brilliant]], [[fabulous]], [[splendid]], [[super]], [[wonderful]]
+*(''extravagantly fanciful and unrealistic''): [[foolish]], [[hare-brained]], [[unrealistic]], [[wild]]
+
+====Translations====
+
+'''based in fantasy rather than reality'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''incredibly wonderful'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[fantastique]] ''m and f''
+*Italian: [[fantastico]] ''m'', fantastica ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''extravagantly fanciful and unrealistic'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+
+===Derived terms===
+*[[fantastical]]
 
 ===Related terms===
 *[[fantasy]]
-*[[fantastical]]
-*[[fantasize]]
+*[[fantasise]], [[fantasize]]
