--- a/wiki/%E9%B2%A3.wikitext
+++ b/wiki/%E9%B2%A3.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': skipjack, bonito
+* '''Common Meaning''': [[skipjack]], [[bonito]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
