--- a/wiki/%E9%AD%AC.wikitext
+++ b/wiki/%E9%AD%AC.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': sole or flounder
+* '''Common Meaning''': [[sole]] or [[flounder]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[はん]] (han), [[ばん]] (ban)
