formatting, +fi <mastodon#64138>

--- a/wiki/mastodon.wikitext
+++ b/wiki/mastodon.wikitext
@@ -1,1 +1,23 @@
-Extinct, large, elephant-like mammal.
+==English==
+===Noun===
+'''mastodon'''
+
+# Extinct, large, elephant-like mammal.
+
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[mastodontti]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+====See also====
+*[[w:Mastodon]]
