+etym casually postulated by a passing kiwi just now! <jandal#37508>

--- a/wiki/jandal.wikitext
+++ b/wiki/jandal.wikitext
@@ -1,13 +1,15 @@
+==English==
 ===Pronunciation===
-*[[w:AHD|AHD]]: jăn'dəl
-*[[w:IPA|IPA]]: /ˈjændəl/
-*[[w:SAMPA|SAMPA]]: /"j{nd@l/
+*jăn'dəl,  /ˈjændəl/, /"j{nd@l/
+
+===Etymology===
+Possibly from [[Japanese]] + [[sandal]]<!-- possibly a trademark -->
 
 ===Noun===
 '''jandal''' (plural: [[jandals]])
 
-# (New Zealand) an item of footwear, usually of rubber, secured by two straps mounted between the big toe and its neighbour.
+# (''New Zealand'') an item of [[footwear]], usually of rubber, secured by two straps mounted between the [[big toe]] and its neighbour.
 
 ====Synonyms====
 *[[flip-flop]]
-*[[thong]] (Aus)
+*[[thong]] (''Australia'')
