--- a/wiki/boat.wikitext
+++ b/wiki/boat.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Pronunciation===
 *bōt, /bəʊt/, /b@Ut/
 
@@ -10,6 +11,11 @@
 #Any small, floating [[construction]] used to [[transport]] [[people]] and [[goods]] on or (in the case of a submarine) under water.
 
 ==== Translations ====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *[[Breton]]: [[bag#Breton|bag]] ''f'', bigi / bagoù ''pl''
 *Bulgarian: [[лодка]] ''f''
 *[[Catalan]]: [[vaixell]] ''m''
@@ -23,6 +29,11 @@
 *Hebrew: [[עוניה]] ''f''
 *[[Indonesian]]: [[perahu]]
 *Italian: [[barca]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[舟]] ([[ふね]], fune) / [[ボート]] (bōto)
 *Korean: [[배]]
 *Persian: [[قایق]] (qayeq)
@@ -30,6 +41,8 @@
 *Portuguese: [[barco#Portuguese|barco]] ''m''
 *Russian: [[лодка]] ''f'' (lo'dka)
 *Spanish: [[barco#Spanish|barco]] ''m'', [[bote]] ''m''
+|}
+|}
 
 ====Derived terms====
 *[[boater]]
