formatting, +fi <somatic#64141>

--- a/wiki/somatic.wikitext
+++ b/wiki/somatic.wikitext
@@ -1,1 +1,20 @@
-Part of, or relating to a body of an organism.
+==English==
+
+===Adjective===
+'''somatic'''
+#Part of, or relating to a body of an organism.
+
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[somaattinen]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
