--- a/wiki/dockyard.wikitext
+++ b/wiki/dockyard.wikitext
@@ -4,7 +4,22 @@
 
 #A place where [[ship]]s are [[repair]]ed or [[load]]ed.
 
-===See also===
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[telakka]], [[laivatelakka]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+====See also====
 *[[dock]]
 *[[harbor]], [[harbour]]
 *[[marina]]
