/* Translations */ +fi <fantastic#64053>

--- a/wiki/fantastic.wikitext
+++ b/wiki/fantastic.wikitext
@@ -22,6 +22,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[fantastinen]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -36,6 +37,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[fantastinen]], [[mahtava]]
 *French: [[fantastique]] ''m and f''
 *Italian: [[fantastico]] ''m'', fantastica ''f''
 |}
@@ -52,6 +54,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Finnish: [[fantastinen]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -59,7 +62,6 @@
 <!--Put translations for languages from J to Z here-->
 |}
 |}
-
 
 ===Derived terms===
 *[[fantastical]]
