formatting, +fi <harbour#58251>

--- a/wiki/harbour.wikitext
+++ b/wiki/harbour.wikitext
@@ -1,9 +1,10 @@
 ==English==
-===Variant===
-*[[harbor]]
+
+===Variant spelling===
+*(''US'') [[harbor]]
 
 ===Noun===
-'''harbour'''
+'''harbour''', plural '''harbours'''
 
 # A sheltered piece of water, adjacent to land, in which ships may stop to load and unload.
 #: ''The city has an excellent natural harbour.''
@@ -11,17 +12,62 @@
 #: ''The neighbourhood is a well-known harbour for petty thieves.''
 
 ====Translations====
-*[[Esperanto]]: [[haveno]] (1)
-*French: [[port]] ''m'' (1)
-*German: [[Hafen]] ''m'' (1)
+'''a place for ships'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Esperanto: [[haveno]]
+*Finnish: [[satama]]
+*French: [[port]] ''m''
+*German: [[Hafen]] ''m''
 *Hawai'ian: [[hono]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Malay: [[bandar]]
-*Russian: [[гавань]] ''f'' (1)
-*Spanish: [[puerto]] ''m'' (1)
+*Russian: [[гавань]] ''f''
+*Spanish: [[puerto]] ''m''
+|}
+|}
+
+'''any place of shelter'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[turvapaikka]], [[turvasatama]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
 
 ===Transitive Verb===
 # To provide a harbour for.
 #: ''The docks, which once harboured tall ships, now harbour only petty thieves.''
+
+====Translations====
+'''to provide safe place'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[suojella]], [[antaa]] [[suojapaikka]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
 
 ===See Also===
 * [[haven]]
