--- a/wiki/%E7%B8%9E.wikitext
+++ b/wiki/%E7%B8%9E.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': white raw silk
+* '''Common Meaning''': white raw [[silk]]<!-- or is "raw silk" idiomatic? -->
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,7 +35,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[こう]] (kō)
@@ -45,9 +45,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 호
+* '''[[Hangeul]]''': [[호]]
 
 * '''[[Eumhun]] reading''': 
 
