--- a/wiki/%E9%B1%BC.wikitext
+++ b/wiki/%E9%B1%BC.wikitext
@@ -13,14 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#fish
+*#[[fish]]
 *# surname
 *# KangXi radical 195
 
-
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
