--- a/wiki/barmy.wikitext
+++ b/wiki/barmy.wikitext
@@ -5,4 +5,4 @@
 '''Barmy'''
 
 # Dotty, goofy, wacko. 
-- 2004: "The movie is sweet enough in its barmy way..." -- Roger Ebert
+ 2004: "The movie is sweet enough in its barmy way..." -- Roger Ebert
