--- a/wiki/labyrinthine.wikitext
+++ b/wiki/labyrinthine.wikitext
@@ -4,4 +4,4 @@
 
 #resembling a [[labyrinth]]; with the qualities of a maze; twisting, convoluted, baffling, 
 
-1996: "Mamet, like one of his characters, invents a labyrinthine, convoluted spiel leading nowhere, and like a magician distracts us with his words while elaborately not producing a rabbit from his hat." -- Review of "American Buffalo," Roger Ebert
+*1996: "Mamet, like one of his characters, invents a labyrinthine, convoluted spiel leading nowhere, and like a magician distracts us with his words while elaborately not producing a rabbit from his hat." -- Review of "American Buffalo," Roger Ebert
