--- a/wiki/%E3%83%8F%E3%83%9E%E3%83%81.wikitext
+++ b/wiki/%E3%83%8F%E3%83%9E%E3%83%81.wikitext
@@ -3,3 +3,6 @@
 '''ハマチ''' ([[魬]], hamachi)
 
 # [[kingfish]], a type of fish. <!-- possibly also translates [[yellowtail]] -->
+
+===Alternate spelling===
+*[[はまち]]
