--- a/wiki/%E3%83%8F%E3%83%9E%E3%83%81.wikitext
+++ b/wiki/%E3%83%8F%E3%83%9E%E3%83%81.wikitext
@@ -2,7 +2,10 @@
 ===Noun===
 '''ハマチ''' ([[魬]], hamachi)
 
-# [[kingfish]], a type of fish. <!-- possibly also translates [[yellowtail]] -->
+# young [[yellowtail]].
 
 ===Alternate spelling===
 *[[はまち]]
+
+===Synonyms===
+*[[いなだ]]
