--- a/wiki/lowering.wikitext
+++ b/wiki/lowering.wikitext
@@ -2,5 +2,8 @@
 ===Adjective===
 '''lowering'''
 
+<!--definition?-->
 
-*2004: "Strange, that 'Alfie' (1966) is halfway remembered as a comedy, when it was actually about a man who attempted to live life as comedy despite the lowering gloom which he thoroughly deserved." - Roger Ebert
+====Quotations====
+
+*'''2004''': Strange, that ''Alfie'' (1966) is halfway remembered as a comedy, when it was actually about a man who attempted to live life as comedy despite the lowering gloom which he thoroughly deserved.'' &*mdash; Roger Ebert <!--source?-->
