def, abbr, Wikipedia link <Buckinghamshire#64150>

--- a/wiki/Buckinghamshire.wikitext
+++ b/wiki/Buckinghamshire.wikitext
@@ -1,1 +1,8 @@
-'''''Buckinghamshire'''''
+==English==
+===Proper noun===
+'''Buckinghamshire'''
+
+#A [[county]] of [[England]].  Postal abbreviation: '''Bucks'''
+
+===See also===
+*[[w:Buckinghamshire|Wikipedia article on Buckinghamshire]]
