--- a/wiki/beast.wikitext
+++ b/wiki/beast.wikitext
@@ -52,11 +52,11 @@ From Latin [[bestia]] : animal, beast
 '''Translations to be checked'''
 *Chinese characters: [[獸]], [[兽]]
 *Czech: [[zvíře]] ''n''
-*German: [[Biest]] ''n'', [[Tier]] ''n''
+*German: [[:de:Biest|Biest]] ''n'', [[:de:Tier|Tier]] ''n''
 *Japanese: [[獣]] ([[けもの]] ''kemono'', [[けだもの]] ''kedamono'')
 *Polish: [[bestia]] ''f''
-*[[Russian]]: [[зверь]]
+*[[Russian]]: [[:ru:зверь|зверь]] /zver'/
 *Slovak: [[zver]] ''f/m'', [[zviera]] ''n'', [[šelma]] ''f''
 
-====Associations====
-*[[Russian]]: the [[beast]] зубаст ([[sharp]]-toothed)
+====multilingual associations====
+*[[Russian]]: the '''beast''' зубаст ([[sharp]]-toothed)
