--- a/wiki/beast.wikitext
+++ b/wiki/beast.wikitext
@@ -58,5 +58,5 @@ From Latin [[bestia]] : animal, beast
 *[[Russian]]: [[:ru:зверь|зверь]] /zver'/
 *Slovak: [[zver]] ''f/m'', [[zviera]] ''n'', [[šelma]] ''f''
 
-====multilingual associations====
+====[[multilingual associations]]====
 *[[Russian]]: the '''beast''' зубаст ([[sharp]]-toothed)
