fmt; combined "go somewhere indirectly" and "move in a curved path"; trimmed some defs; some syns and translations <wander#64130>

--- a/wiki/wander.wikitext
+++ b/wiki/wander.wikitext
@@ -1,11 +1,74 @@
 ==English==
+===Intransitive verb===
+'''to wander''' ('''wandering''', '''wandered''', '''wandered''')
 
-===Verb===
+#To move without purpose; often in search of livelihood.
+#To commit [[adultery]].
+#To go somewhere indirectly or at varying speeds; to move in a curved path.
+#Of the mind, to lose focus or clarity of argument or attention.
 
-'''Wander'''
+====Synonyms====
+*(''move without purpose''): [[err]], [[roam]]
+*(''commit adultery''): [[cheat]]
+*(''go somewhere indirectly''):
+*(''of the mind, to lose focus or clarity of argument or attention''): [[drift]]
 
-# To move without purpose, or aimlessly; often in search of livelyhood.
-# To commit adultery, i.e. to have sex with someone other than a partner in a marriage.
-# To go somewhere indirectly or at varying speeds.
-# To move in a spiral or curved path.
-# To lose focus or clarity of argument or attention
+====Translations====
+
+'''move without purpose'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[errer]]
+*Italian: [[errare]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''commit adultery'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''go somewhere indirectly'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''of the mind, to lose focus or clarity of argument or attention'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
