extra def, with syns, note on spelling <mischievous#64121>

--- a/wiki/mischievous.wikitext
+++ b/wiki/mischievous.wikitext
@@ -1,9 +1,13 @@
 ==English==
-
 ===Adjective===
 '''mischievous''' (''no [[comparative]] or [[superlative]]'')
 
-# Causing mischief
+#Causing mischief.
+#Badly-behaved.
+
+====Usage note====
+*Note the spelling: there is no ''i'' after the ''v''.
 
 ====Synonyms====
 *(''causing mischief''): [[harmful]], [[hurtful]], [[detrimental]], [[noxious]], [[pernicious]], [[destructive]]
+*(''badly-behaved''): [[badly-behaved]], [[naughty]]
