+pronunciation, with note <mischievous#64121>

--- a/wiki/mischievous.wikitext
+++ b/wiki/mischievous.wikitext
@@ -1,4 +1,7 @@
 ==English==
+===Pronunciation===
+*[[IPA]]: /ˈmɪsʃəvəs/ (''the pronunciation'' /mɪsˈʃiːvɪəs/, ''based on the misspelling "mischievious", ''is incorrect'')
+
 ===Adjective===
 '''mischievous''' (''no [[comparative]] or [[superlative]]'')
 
