+pronunciation, with note <mischievous#64121>

--- a/wiki/mischievous.wikitext
+++ b/wiki/mischievous.wikitext
@@ -5,8 +5,8 @@
 ===Adjective===
 '''mischievous''' (''no [[comparative]] or [[superlative]]'')
 
-#Causing mischief.
-#Badly-behaved.
+#Causing [[mischief]].
+#[[Badly-behaved]].
 
 ====Usage note====
 *Note the spelling: there is no ''i'' after the ''v''.
