--- a/wiki/mischievous.wikitext
+++ b/wiki/mischievous.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Pronunciation===
-*[[IPA]]: /ˈmɪsʃəvəs/ (''the pronunciation'' /mɪsˈʃiːvɪəs/, ''based on the misspelling "mischievious", ''is incorrect'')
+*[[IPA]]: /ˈmɪstʃəvəs/ (''the pronunciation'' /mɪsˈtʃiːvɪəs/, ''based on the misspelling "mischievious", ''is incorrect'')
 
 ===Adjective===
 '''mischievous''' (''no [[comparative]] or [[superlative]]'')
