--- a/wiki/curiosity.wikitext
+++ b/wiki/curiosity.wikitext
@@ -12,6 +12,7 @@
 
 ====Translations====
 *[[Finnish]]: [[uteliaisuus]]
+*[[Lithuanian]]: [[smalsumas]] ''m'', [[žingeidumas]] ''m''
 
 ====Related words====
 *[[curious]] (adjective)
