--- a/wiki/thought.wikitext
+++ b/wiki/thought.wikitext
@@ -24,6 +24,7 @@
 *Hebrew: [[מחשבה]] (Mach'shava) ''f''
 *Italian: [[idea#Italian|idea]] ''f'' (1), [[pensiero]] ''m'' (2)
 *Japanese: [[考慮]] (こうりょ, kouryo), [[思考]] (しこう, shikou), [[思索]] (しさく, shisaku), [[思考力]] (しこうりょく, shikouryoku); [[考え]] ([[かんがえ]], kangae), [[意見]] (いけん, iken); [[意図]] (いと, ito)
+*Lithuanian: [[mintis]] ''f'' (1); [[mąstymas]] ''m'' (2)
 *Persian: [[فكر]] (fekr)(1), [[اندیشه]] (andishe) (2)
 *Polish: [[myśl]] ''f'' (1,2), [[pomysł]] ''m'' (2)
 *Romanian: [[gând]]
