--- a/wiki/infra.wikitext
+++ b/wiki/infra.wikitext
@@ -1,11 +1,11 @@
-
-
+==English==
 ===Etymology===
-Latin for "below"
+Latin ''infra'', below
 
-===Noun===
+===Adverb===
+'''infra'''
 
-# used in legal writing to indicate that this point or case is discussed later.
+#Used in legal writing to refer to something discussed later.
 
-===See also===
-[[Supra]]
+====Antonyms====
+*[[supra]]
