fmt; is part of speech now correct? <supra#64084>

--- a/wiki/supra.wikitext
+++ b/wiki/supra.wikitext
@@ -1,8 +1,10 @@
 ===Etymology===
-Latin for "[[above]]"
+Latin ''[[supra]]'', above
 
-===Noun===
-#used in legal citations to indicate that the cite is from the same source as the previous citation.
+===Adverb===
+'''supra'''
 
-===See also===
-[[Infra]]
+#(''legal'') Used to indicate that the current citation is from the same source as the previous one.
+
+====Antonyms====
+*[[infra]]
