Is part of speech correct? <infra#64086>

--- a/wiki/infra.wikitext
+++ b/wiki/infra.wikitext
@@ -5,7 +5,7 @@ Latin ''infra'', below
 ===Adverb===
 '''infra'''
 
-#Used in legal writing to refer to something discussed later.
+#(''legal'') Used to refer to something discussed later.
 
 ====Antonyms====
 *[[supra]]
