--- a/wiki/curious.wikitext
+++ b/wiki/curious.wikitext
@@ -13,6 +13,7 @@
 
 ====Translations====
 *[[Finnish]]: [[utelias]] (1), [[erikoinen]] (2)
+*[[Lithuanian]]: (1): [[smalsus]] ''m'', [[žingeidus]] ''m''; (2): [[neįprastas]] ''m'', [[keistas]] ''m''
 
 ====Related words====
 *[[curiosity]] (noun)
