+Wikipedia link <ERNIE#64163>

--- a/wiki/ERNIE.wikitext
+++ b/wiki/ERNIE.wikitext
@@ -6,3 +6,6 @@ Initial letters of "electronic random number indicator equipment"
 '''ERNIE'''
 
 #The name of the machine that draws random [[premium bond]] numbers in the [[United Kingdom]].
+
+===See also===
+*[[w:Premium Bond|Wikipedia article on premium bonds]]
