--- a/wiki/possibility.wikitext
+++ b/wiki/possibility.wikitext
@@ -20,6 +20,7 @@
 *Italian: [[possibilità]] ''f''
 *Japanese: [[可能性]]
 *Korean: [[가능성]]
+*Lithuanian: [[galimybė]] ''f''
 *Portuguese: [[possibilidade]] ''f''
 *Russian: [[возможность]] ''f'' (vozmozhnost')
 *Spanish: [[posibilidad]] ''f''
