--- a/wiki/discovery.wikitext
+++ b/wiki/discovery.wikitext
@@ -8,3 +8,6 @@
 #: ''The purpose of the voyage was discovery.''
 # (''law, uncountable'') A pre-trial phase in which evidence is gathered.
 #: ''The prosecution moved to supress certain items turned up during discovery.''
+
+====Translations====
+*Lithuanian: [[atradinys]] (?) ''m'' (1); [[atradimas]] ''m'' (2)
