+adj; +IPA (pronunciations differ) <slurry#60932>

--- a/wiki/slurry.wikitext
+++ b/wiki/slurry.wikitext
@@ -1,7 +1,19 @@
 ==English==
-
 ===Noun===
+'''slurry''' (''[[uncountable]]'')
 
-'''slurry'''
+====Pronunciation====
+<!--pronunciation section is here because it is different from that for the adjective-->
+*[[IPA]] ([[RP]]): /ˈslʌri/
 
 #A thin mixture of liquid and fine substances such as clay or plaster of Paris.
+
+===Adjective===
+'''slurry''' (''[[comparative]]'' '''slurrier''', ''[[superlative]]'' '''slurriest''')
+
+====Pronunciation====
+<!--pronunciation section is here because it is different from that for the noun-->
+*[[IPA]] ([[RP]]): /ˈslɜːri/
+
+#Slurred, tending to slur.
+#:''slurry voice''
