--- a/wiki/memory.wikitext
+++ b/wiki/memory.wikitext
@@ -25,6 +25,7 @@
 {|
 *Italian: [[memoria]] ''f''
 *Latin: [[memoria]] ''f''
+*Lithuanian: [[atmintis]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -57,6 +58,7 @@
 {|
 *Italian: [[memoria]] ''f''
 *Latin: [[memoria]] ''f''
+*Lithuanian: [[atmintinė]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -81,7 +83,6 @@
 *Swedish: [[minne]] ''n''
 |}
 |}
-
 
 ====Translations====
 *Finnish: [[muisti]]
