--- a/wiki/record.wikitext
+++ b/wiki/record.wikitext
@@ -36,6 +36,7 @@
 {|
 <!--languages from J to Z go here-->
 |}
+*Lithuanian: [[įrašas]] ''m''
 |}
 
 '''most extreme known value of some achievement'''
@@ -50,6 +51,7 @@
 {|
 <!--languages from J to Z go here-->
 |}
+*Lithuanian: [[rekordas]] ''m''
 |}
 
 '''vinyl disc/disk'''
@@ -66,6 +68,7 @@
 {|
 <!--languages from J to Z go here-->
 |}
+*Lithuanian: [[diskas]] ''m'', [[plokštelė]] ''f''
 |}
 
 '''music on such a disc/disk'''
@@ -82,6 +85,7 @@
 {|
 <!--languages from J to Z go here-->
 |}
+*Lithuanian: [[įrašas]] ''m''
 |}
 
 '''computing: set of data relating to a single individual or item'''
@@ -96,6 +100,7 @@
 {|
 <!--languages from J to Z go here-->
 |}
+*Lithuanian: [[įrašas]] ''m''
 |}
 
 ===Transitive verb===
