/* Translations */ +fr <record#55573>

--- a/wiki/record.wikitext
+++ b/wiki/record.wikitext
@@ -30,6 +30,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*French: [[enregistrement]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -45,6 +46,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*French: [[record]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -92,6 +94,7 @@
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
+*French: [[enregistrement]] ''m''
 {|
 <!--languages from A to I go here-->
 |}
