--- a/wiki/GOP.wikitext
+++ b/wiki/GOP.wikitext
@@ -1,3 +1,7 @@
-GOP: Stands for "Grand Old Party", the Republican Party, one of the two major political parties in the United States. 
+'''NOUN'''
 
-http://en.wikipedia.org/wiki/GOP
+GOP: 
+
+1. Stands for "Grand Old Party", the Republican Party, one of the two major political parties in the United States. 
+
+[http://en.wikipedia.org/wiki/GOP Wikipedia Entry for GOP]
